callforpapers/pretalx/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pretalx
spec:
  serviceName: pretalx
  replicas: 1
  selector:
    matchLabels:
      app: pretalx
  template:
    metadata:
      labels:
        app: pretalx
    spec:
      containers:
        - name: pretalx
          image: smana/pretalx:v2025.1.0-cndfr-1
          ports:
            - containerPort: 8080
          livenessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Host
                  value: cfp.cloudnativedays.fr
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 80
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Host
                  value: cfp.cloudnativedays.fr
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
            - name: pretalx-data
              mountPath: /data
            - name: pretalx-public
              mountPath: /public
            - name: pretalx-config
              mountPath: /etc/pretalx/pretalx.cfg
              subPath: pretalx.cfg
          resources:
            requests:
              memory: 4Gi
              cpu: 300m
            limits:
              memory: 4Gi
        - name: pretalx-worker
          image: pretalx/standalone:v2026.1.2
          command:
            ["celery", "-A", "pretalx.celery_app", "worker", "-l", "info"]
          resources:
            requests:
              memory: 700Mi
              cpu: 100m
            limits:
              memory: 700Mi
          volumeMounts:
            - name: pretalx-data
              mountPath: /data
            - name: pretalx-public
              mountPath: /public
            - name: pretalx-config
              mountPath: /etc/pretalx/pretalx.cfg
              subPath: pretalx.cfg
        - name: nginx-statics
          image: nginx:1.29-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              protocol: TCP
          volumeMounts:
            - mountPath: /public
              name: pretalx-public
              readOnly: true
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-config
              subPath: nginx.conf
            - mountPath: /var/cache/nginx
              name: nginx-cache
            - mountPath: /tmp
              name: nginx-tmp
          securityContext:
            runAsUser: 101
            runAsGroup: 101
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 128Mi
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-config
          configMap:
            defaultMode: 420
            name: pretalx-nginx
        - name: pretalx-config
          configMap:
            defaultMode: 420
            name: pretalx-config
        - name: nginx-tmp
          emptyDir: {}
      securityContext:
        fsGroup: 999
        runAsUser: 999
        runAsGroup: 999
  volumeClaimTemplates:
    - metadata:
        name: pretalx-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "node-local-retain"
        resources:
          requests:
            storage: 20Gi
    - metadata:
        name: pretalx-public
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "node-local-retain"
        resources:
          requests:
            storage: 10Gi
