callforpapers/pretalx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pretalx
  namespace: cnd-callforpapers
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: pretalx
