callforpapers/pretalx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pretalx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: cfp.cloudnativedays.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pretalx
                port:
                  number: 80
